--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AudioPlayer.NoActionBar">
+        android:theme="@style/Theme.AudioPlayer.NoActionBar"
+        android:screenOrientation="portrait">
 
         <activity
             android:name=".SelectCategoryActivity"
